2008-11-25  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b43)

	* Fixed finding ImageMagick (convert) on Mac and presumably Linux.
	* Added support for importing from Aperture: the user must first
	  select the pictures to be imported in Aperture, and GR will use
	  AppleScript to tell Aperture to export them, along with the captions,
	  then GR will load the pictures.

2008-09-16  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b42)

	* Fixed blinking when dropping to the album tree.
	* Many tweaks to the cropping functionality.

2008-09-10  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b41)

	* Fixed issue with quit and logout warning messages (thanks to Guillemette
	  for complaining loudly about this).

2008-09-09  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b40)

	* Fixed issue with copy/paste.

2008-07-31  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b39)

	* Users can select Gallery URLs that GR should automatically
	  log into on startup (thanks Brian Egge).
	* Fixed minor issues with editing image properties and extra fields.

2008-07-07  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b38)

	* No longer loading thumbnails in the slideshow applet.
	* Fixed transitions in special cases in slideshow applet.

2008-03-06  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b37)

	* Moved the shutdown functionality back into the applets. Review 521.

2008-02-13  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b36)

	* Fixed DnD to the album tree.
	* Added support for Summary and Description explicitly (instead of
	  just lumped together as extrafields).
	* The upload applet now supports thumbnails.
	* GR now verifies the signatures of dynamically-loaded classes
	  to prevent unauthorized modifications (applets only)
	* The upload applet now supports setting extra fields (Summary and
	  Description in G2)
	* GR standalone now fetches info about a newly created album so that
	  extra fields can be edited for images added to it
	* More details in upload progress window
